sass/article.scss
@import "colors.scss";

article {
    margin: .5rem .5rem;
    
    p {
        margin: 1rem 0;
    }
    
    h1, h2, h3 {
        margin: 1rem 0;
    }
    
    h1 {
        text-align: center;
    }
    
    h2.date {
        font-weight: normal;
        text-align: center;
        margin-top: -1rem;
        font-size: 1rem;
        color: var(--light);
    }
    
    code {
        background-color: var(--surface);
        padding: 0 .25rem;
        border-radius: .25rem;
    }
    
    .footnote-definition {
        display: flex;
        margin: .75rem 0;
        gap: .5rem;
        color: var(--light);
        
        &:first-of-type {
            padding-top: .5rem;
            border-top: 2px solid var(--light);
        }
        
        p {
            margin: 0;
        }
    }
}

